Update pages with placeholder content

--- a/news.html
+++ b/news.html
@@ -17,13 +17,8 @@
             </div>
         </div>
         <div class="content">
-            <h1>About me</h1>
-            <p>I am currently doing a PhD at <a href="https://en.uit.no/startsida">UiT The Arctic University of Tromsø</a>.</p>
-            <p>I have another website over at
-            <a href="https://flottflyt.com">flottflyt.com</a>.
-            There I put up things I find interesting and projects I work on in my spare
-            time.</p>
-            <!-- <p><strong>Here</strong> is some more text. And a link to my <a href="https://github.com/engeir">GitHub</a> profile!</p> -->
+            <h1>What's up</h1>
+            <p>No news yet...</p>
         </div>
     </body>
 </html>
