Move CV section to main home.

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
             <a href="https://flottflyt.com">flottflyt.com</a>.
             There I put up things I find interesting and projects I work on in my spare
             time.</p>
+            <h2>CV</h2>
+            <p><a href="https://resume.eirikenger.xyz">Go to CV</a></p>
+            <p><a href="https://resume.eirikenger.xyz/index.pdf">Download CV as PDF</a></p>
             <!-- <p><strong>Here</strong> is some more text. And a link to my <a href="https://github.com/engeir">GitHub</a> profile!</p> -->
         </div>
     </body>
