--- a/contact.html
+++ b/contact.html
@@ -19,8 +19,7 @@
         <div class="content">
             <h1>Email</h1>
             <p><a href="mailto:eirik.r.enger@uit.no">eirik.r.enger@uit.no</a></p>
-            <h1>More</h1>
-            <p>CV will come soon...</p>
+            <!-- <h1>More</h1> -->
         </div>
     </body>
 </html>
