Update home with master thesis work

--- a/index.html
+++ b/index.html
@@ -18,15 +18,30 @@
         </div>
         <div class="content">
             <h1>About me</h1>
-            <p>I am currently doing a PhD at <a href="https://en.uit.no/startsida">UiT The Arctic University of Tromsø</a>.</p>
+            <p>I am currently doing a PhD at <a href="https://en.uit.no/startsida">UiT The
+                Arctic University of Tromsø</a>. The working title of the project is
+            <q>Global temperature response to volcanic activity</q>, where we will be
+            looking at how the global mean temperature responds to volcanic activity using
+            a new non-parametric approach.</p>
+            <p>You can have a look at my <strong>CV</strong> <a
+                href="https://resume.eirikenger.xyz">here</a>, or <a
+                href="https://resume.eirikenger.xyz/index.pdf">download it as PDF</a>.</p>
             <p>I have another website over at
             <a href="https://flottflyt.com">flottflyt.com</a>.
             There I put up things I find interesting and projects I work on in my spare
             time.</p>
-            <h2>CV</h2>
-            <p><a href="https://resume.eirikenger.xyz">Go to CV</a></p>
-            <p><a href="https://resume.eirikenger.xyz/index.pdf">Download CV as PDF</a></p>
-            <!-- <p><strong>Here</strong> is some more text. And a link to my <a href="https://github.com/engeir">GitHub</a> profile!</p> -->
+            <h1>Work</h1>
+            <h2>Master Thesis</h2>
+            <p> My master thesis was titled <a
+                href="https://hdl.handle.net/10037/19542"><strong><q>A model for IS
+                        spectra for magnetized plasma with arbitrary isotropic velocity
+                        distributions</q></strong></a>. It discusses radar theory related
+            to incoherent scatter radars and measurement of suprathermal electrons,
+            electrons with more energy than the normal population of electrons present in
+            the upper atmosphere. A large part of the thesis work was put into creating a
+            code that solved the power spectrum of said suprathermal electrons
+            numerically. The home page of the source code is available <a
+                href="https://engeir.github.io/isr-spectrum/">here</a>.</p>
         </div>
     </body>
 </html>
